// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline default renders basic Timeline with a single Timeline.Item 1`] = `
.c2 {
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.c9 {
  display: flex;
  margin-top: 0px;
  flex-direction: row;
  justify-content: space-between;
  font-size: 16px;
  font-weight: normal;
  color: #bdc3c7;
  align-items: center;
  padding: 5px 5px;
  border-radius: 60px;
  color: black;
  border: none;
  opacity: 0.3;
}

.c10 {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  text-transform: uppercase;
  color: black;
  text-align: right;
  font-size: 12px;
}

.c7 {
  min-height: 100px;
  width: 100%;
  display: block;
  color: #a7a7a7;
  font-size: 11px;
  font-weight: 300;
  cursor: pointer;
  position: relative;
  padding: 0px 10px 0px 50px;
  box-sizing: border-box;
  overflow: hidden;
}

.c7:hover {
  background: rgba(255, 125, 125, 0.2);
}

.c7::before {
  content: '';
  width: 12px;
  height: 12px;
  opacity: 0.3;
  display: block;
  position: absolute;
  left: 20px;
  top: 10px;
  background: black;
  transition: border 0.7s ease;
  border-radius: 100%;
  z-index: 99999;
}

.c7::after {
  content: '';
  width: 2px;
  opacity: 0.3;
  height: 100px;
  background: black;
  position: absolute;
  left: 25px;
  top: 0px;
}

.c5 {
  display: none;
}

.c0 {
  overflow: hidden;
  left: 0px;
  padding: 5px;
  background: none;
}

.c0 .c4:checked+.c6 .c8 {
  opacity: 1;
}

.c0 .c4:checked+.c6 {
  max-height: 300px;
}

.c0 .c4:checked+.c6:hover {
  background: rgba(125, 255, 125, 0.2);
}

.c0 .c4:checked+.c6:before {
  opacity: 1;
}

.c0 .c4:checked+.c6:after {
  opacity: 1;
}

.c3:first-child .c6:before {
  top: 10px;
}

.c3:first-child .c6:after {
  top: 20px;
  height: 200px;
}

.c3:last-child .c6:before {
  top: 30%;
}

.c3:last-child .c6:after {
  top: -70px;
}

.c1 {
  padding: 0px 10px;
  font-family: Roboto;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  color: black;
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-item: center;
  text-transform: uppercase;
}

.c12 {
  width: 100%;
  height: 8px;
  background: rgba(0, 0, 0, 0.1);
}

.c11 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25px;
  width: 25px;
  border: none;
  border-radius: 60px;
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
  <ul
    className="c2"
  >
    <li
      className="c3"
    >
      <input
        checked={false}
        className="c4 c5"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c6 c7"
      >
        <h2
          className="c8 c9"
        >
          timeline-item-basic
          <header
            className="c10"
          >
            <div
              className="c11"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 17 21"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.5 0C9.22674 2.05911e-08 10.9268 0.425849 12.4497 1.23983C13.9725 2.0538 15.2711 3.23078 16.2304 4.66651C17.1898 6.10224 17.7802 7.7524 17.9494 9.47082C18.1187 11.1892 17.8615 12.9229 17.2007 14.5182C16.5399 16.1135 15.4959 17.5212 14.1611 18.6166C12.8263 19.712 11.242 20.4614 9.54845 20.7982C7.85489 21.1351 6.1044 21.0491 4.45201 20.5479C2.79963 20.0466 1.29637 19.1456 0.075381 17.9246L7.5 10.5V0Z"
                  fill="black"
                />
              </svg>
            </div>
          </header>
        </h2>
        <div
          className="c12"
        />
        <br />
        <div
          className="c12"
        />
      </label>
    </li>
  </ul>
</div>
`;

exports[`Timeline default renders mixture of timelines complete/not-complete 1`] = `
.c2 {
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.c9 {
  display: flex;
  margin-top: 0px;
  flex-direction: row;
  justify-content: space-between;
  font-size: 16px;
  font-weight: normal;
  color: #bdc3c7;
  align-items: center;
  padding: 5px 5px;
  border-radius: 60px;
  color: black;
  border: none;
  opacity: 0.3;
}

.c10 {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  text-transform: uppercase;
  color: black;
  text-align: right;
  font-size: 12px;
}

.c7 {
  min-height: 100px;
  width: 100%;
  display: block;
  color: #a7a7a7;
  font-size: 11px;
  font-weight: 300;
  cursor: pointer;
  position: relative;
  padding: 0px 10px 0px 50px;
  box-sizing: border-box;
  overflow: hidden;
}

.c7:hover {
  background: rgba(255, 125, 125, 0.2);
}

.c7::before {
  content: '';
  width: 12px;
  height: 12px;
  opacity: 0.3;
  display: block;
  position: absolute;
  left: 20px;
  top: 10px;
  background: black;
  transition: border 0.7s ease;
  border-radius: 100%;
  z-index: 99999;
}

.c7::after {
  content: '';
  width: 2px;
  opacity: 0.3;
  height: 100px;
  background: black;
  position: absolute;
  left: 25px;
  top: 0px;
}

.c5 {
  display: none;
}

.c0 {
  overflow: hidden;
  left: 0px;
  padding: 5px;
  background: none;
}

.c0 .c4:checked+.c6 .c8 {
  opacity: 1;
}

.c0 .c4:checked+.c6 {
  max-height: 300px;
}

.c0 .c4:checked+.c6:hover {
  background: rgba(125, 255, 125, 0.2);
}

.c0 .c4:checked+.c6:before {
  opacity: 1;
}

.c0 .c4:checked+.c6:after {
  opacity: 1;
}

.c3:first-child .c6:before {
  top: 10px;
}

.c3:first-child .c6:after {
  top: 20px;
  height: 200px;
}

.c3:last-child .c6:before {
  top: 30%;
}

.c3:last-child .c6:after {
  top: -70px;
}

.c1 {
  padding: 0px 10px;
  font-family: Roboto;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  color: black;
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-item: center;
  text-transform: uppercase;
}

.c12 {
  width: 100%;
  height: 8px;
  background: rgba(0, 0, 0, 0.1);
}

.c11 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25px;
  width: 25px;
  border: none;
  border-radius: 60px;
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
  <ul
    className="c2"
  >
    <li
      className="c3"
    >
      <input
        checked={false}
        className="c4 c5"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c6 c7"
      >
        <h2
          className="c8 c9"
        >
          timeline-item-not-complete
          <header
            className="c10"
          >
            <div
              className="c11"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 17 21"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.5 0C9.22674 2.05911e-08 10.9268 0.425849 12.4497 1.23983C13.9725 2.0538 15.2711 3.23078 16.2304 4.66651C17.1898 6.10224 17.7802 7.7524 17.9494 9.47082C18.1187 11.1892 17.8615 12.9229 17.2007 14.5182C16.5399 16.1135 15.4959 17.5212 14.1611 18.6166C12.8263 19.712 11.242 20.4614 9.54845 20.7982C7.85489 21.1351 6.1044 21.0491 4.45201 20.5479C2.79963 20.0466 1.29637 19.1456 0.075381 17.9246L7.5 10.5V0Z"
                  fill="black"
                />
              </svg>
            </div>
          </header>
        </h2>
        <div
          className="c12"
        />
        <br />
        <div
          className="c12"
        />
      </label>
    </li>
    <li
      className="c3"
    >
      <input
        checked={true}
        className="c4 c5"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c6 c7"
      >
        <h2
          className="c8 c9"
        >
          timeline-item-complete
          <header
            className="c10"
          >
            <div
              className="c11"
            >
              <svg
                fill="none"
                height="13"
                viewBox="0 0 17 13"
                width="17"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1 5.5L6 10.5L15.5 1"
                  stroke="#a7a7a7"
                  strokeWidth="2.5"
                />
              </svg>
            </div>
          </header>
        </h2>
        <h1>
          header
        </h1>
      </label>
    </li>
  </ul>
</div>
`;

exports[`Timeline default renders text block if no children present in Timeline.Item 1`] = `
.c2 {
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.c9 {
  display: flex;
  margin-top: 0px;
  flex-direction: row;
  justify-content: space-between;
  font-size: 16px;
  font-weight: normal;
  color: #bdc3c7;
  align-items: center;
  padding: 5px 5px;
  border-radius: 60px;
  color: black;
  border: none;
  opacity: 0.3;
}

.c10 {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  text-transform: uppercase;
  color: black;
  text-align: right;
  font-size: 12px;
}

.c7 {
  min-height: 100px;
  width: 100%;
  display: block;
  color: #a7a7a7;
  font-size: 11px;
  font-weight: 300;
  cursor: pointer;
  position: relative;
  padding: 0px 10px 0px 50px;
  box-sizing: border-box;
  overflow: hidden;
}

.c7:hover {
  background: rgba(255, 125, 125, 0.2);
}

.c7::before {
  content: '';
  width: 12px;
  height: 12px;
  opacity: 0.3;
  display: block;
  position: absolute;
  left: 20px;
  top: 10px;
  background: black;
  transition: border 0.7s ease;
  border-radius: 100%;
  z-index: 99999;
}

.c7::after {
  content: '';
  width: 2px;
  opacity: 0.3;
  height: 100px;
  background: black;
  position: absolute;
  left: 25px;
  top: 0px;
}

.c5 {
  display: none;
}

.c0 {
  overflow: hidden;
  left: 0px;
  padding: 5px;
  background: none;
}

.c0 .c4:checked+.c6 .c8 {
  opacity: 1;
}

.c0 .c4:checked+.c6 {
  max-height: 300px;
}

.c0 .c4:checked+.c6:hover {
  background: rgba(125, 255, 125, 0.2);
}

.c0 .c4:checked+.c6:before {
  opacity: 1;
}

.c0 .c4:checked+.c6:after {
  opacity: 1;
}

.c3:first-child .c6:before {
  top: 10px;
}

.c3:first-child .c6:after {
  top: 20px;
  height: 200px;
}

.c3:last-child .c6:before {
  top: 30%;
}

.c3:last-child .c6:after {
  top: -70px;
}

.c1 {
  padding: 0px 10px;
  font-family: Roboto;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  color: black;
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-item: center;
  text-transform: uppercase;
}

.c12 {
  width: 100%;
  height: 8px;
  background: rgba(0, 0, 0, 0.1);
}

.c11 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25px;
  width: 25px;
  border: none;
  border-radius: 60px;
}

<div
  className="c0"
>
  <h1
    className="c1"
  />
  <ul
    className="c2"
  >
    <li
      className="c3"
    >
      <input
        checked={false}
        className="c4 c5"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c6 c7"
      >
        <h2
          className="c8 c9"
        >
          timeline-item-3
          <header
            className="c10"
          >
            <div
              className="c11"
            >
              <svg
                fill="none"
                height="18"
                viewBox="0 0 17 21"
                width="18"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.5 0C9.22674 2.05911e-08 10.9268 0.425849 12.4497 1.23983C13.9725 2.0538 15.2711 3.23078 16.2304 4.66651C17.1898 6.10224 17.7802 7.7524 17.9494 9.47082C18.1187 11.1892 17.8615 12.9229 17.2007 14.5182C16.5399 16.1135 15.4959 17.5212 14.1611 18.6166C12.8263 19.712 11.242 20.4614 9.54845 20.7982C7.85489 21.1351 6.1044 21.0491 4.45201 20.5479C2.79963 20.0466 1.29637 19.1456 0.075381 17.9246L7.5 10.5V0Z"
                  fill="black"
                />
              </svg>
            </div>
          </header>
        </h2>
        <div
          className="c12"
        />
        <br />
        <div
          className="c12"
        />
      </label>
    </li>
  </ul>
</div>
`;

exports[`Timeline default renders timeline items with multiple children 1`] = `
.c2 {
  list-style: none;
  margin: 0px;
  padding: 0px;
}

.c9 {
  display: flex;
  margin-top: 0px;
  flex-direction: row;
  justify-content: space-between;
  font-size: 16px;
  font-weight: normal;
  color: #bdc3c7;
  align-items: center;
  padding: 5px 5px;
  border-radius: 60px;
  color: black;
  border: none;
  opacity: 0.3;
}

.c10 {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  gap: 10px;
  text-transform: uppercase;
  color: black;
  text-align: right;
  font-size: 12px;
}

.c7 {
  min-height: 100px;
  width: 100%;
  display: block;
  color: #a7a7a7;
  font-size: 11px;
  font-weight: 300;
  cursor: pointer;
  position: relative;
  padding: 0px 10px 0px 50px;
  box-sizing: border-box;
  overflow: hidden;
}

.c7:hover {
  background: rgba(255, 125, 125, 0.2);
}

.c7::before {
  content: '';
  width: 12px;
  height: 12px;
  opacity: 0.3;
  display: block;
  position: absolute;
  left: 20px;
  top: 10px;
  background: black;
  transition: border 0.7s ease;
  border-radius: 100%;
  z-index: 99999;
}

.c7::after {
  content: '';
  width: 2px;
  opacity: 0.3;
  height: 100px;
  background: black;
  position: absolute;
  left: 25px;
  top: 0px;
}

.c5 {
  display: none;
}

.c0 {
  overflow: hidden;
  left: 0px;
  padding: 5px;
  background: none;
}

.c0 .c4:checked+.c6 .c8 {
  opacity: 1;
}

.c0 .c4:checked+.c6 {
  max-height: 300px;
}

.c0 .c4:checked+.c6:hover {
  background: rgba(125, 255, 125, 0.2);
}

.c0 .c4:checked+.c6:before {
  opacity: 1;
}

.c0 .c4:checked+.c6:after {
  opacity: 1;
}

.c3:first-child .c6:before {
  top: 10px;
}

.c3:first-child .c6:after {
  top: 20px;
  height: 200px;
}

.c3:last-child .c6:before {
  top: 30%;
}

.c3:last-child .c6:after {
  top: -70px;
}

.c1 {
  padding: 0px 10px;
  font-family: Roboto;
  font-size: 16px;
  font-style: normal;
  font-weight: 700;
  color: black;
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-item: center;
  text-transform: uppercase;
}

.c11 {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 25px;
  width: 25px;
  border: none;
  border-radius: 60px;
}

<div
  className="c0"
>
  <h1
    className="c1"
  >
    default
  </h1>
  <ul
    className="c2"
  >
    <li
      className="c3"
    >
      <input
        checked={true}
        className="c4 c5"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c6 c7"
      >
        <h2
          className="c8 c9"
        >
          timeline-item-1
          <header
            className="c10"
          >
            <div
              className="c11"
            >
              <svg
                fill="none"
                height="13"
                viewBox="0 0 17 13"
                width="17"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1 5.5L6 10.5L15.5 1"
                  stroke="#a7a7a7"
                  strokeWidth="2.5"
                />
              </svg>
            </div>
          </header>
        </h2>
        <button>
          test me
        </button>
        <p>
          some paragraph
        </p>
        <h1>
          some header
        </h1>
        <div>
          some div
        </div>
        <span>
          some span
        </span>
      </label>
    </li>
    <li
      className="c3"
    >
      <input
        checked={true}
        className="c4 c5"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="c6 c7"
      >
        <h2
          className="c8 c9"
        >
          timeline-item-2
          <header
            className="c10"
          >
            <div
              className="c11"
            >
              <svg
                fill="none"
                height="13"
                viewBox="0 0 17 13"
                width="17"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M1 5.5L6 10.5L15.5 1"
                  stroke="#a7a7a7"
                  strokeWidth="2.5"
                />
              </svg>
            </div>
          </header>
        </h2>
        <h2>
          header
        </h2>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        </p>
      </label>
    </li>
  </ul>
</div>
`;
